securitygroups.json.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This template creates Security Groups - other CloudFormation Stacks in this region reference exported outputs from this stack.",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "Import Existing Stack Outputs"
                    },
                    "Parameters": [
                        "NetworkStackName"
                    ]
                }
            ]
        }
    },
    "Parameters": {
        "NetworkStackName": {
            "Description": "Name of an active CloudFormation stack that contains the Network resources that will be used in this stack.",
            "Type": "String",
            "MinLength": 1,
            "MaxLength": 255,
            "AllowedPattern": "^[a-zA-Z][-a-zA-Z0-9]*$",
            "Default": "NetworkStack"
        }
    },
    "Resources": {
        "SecureShellSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "SecureShell VPN Router",
                "VpcId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkStackName}-VPCID"
                    }
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "WebServerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Web Servers",
                "VpcId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkStackName}-VPCID"
                    }
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "icmp",
                        "FromPort": "-1",
                        "ToPort": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "SecureShellSecurityGroup": {
            "Description": "SecureShellSecurityGroup",
            "Value": {
                "Fn::GetAtt": [
                    "SecureShellSecurityGroup",
                    "GroupId"
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-SecureShellSecurityGroup"
                }
            }
        },
        "WebServerSecurityGroup": {
            "Description": "WebServerSecurityGroup",
            "Value": {
                "Fn::GetAtt": [
                    "WebServerSecurityGroup",
                    "GroupId"
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-WebServerSecurityGroup"
                }
            }
        }
    }
}
